fix : project response에 part 추가