@@ -11,6 +11,7 @@ import likelion.univ.domain.project.entity.Tech;
 import likelion.univ.domain.university.adaptor.UniversityAdaptor;
 import likelion.univ.domain.user.adaptor.UserAdaptor;
 import likelion.univ.domain.user.entity.User;
+import likelion.univ.project.dto.response.ProjectMemberResponseDto;
 import likelion.univ.project.dto.response.ProjectResponseDto;
 import lombok.RequiredArgsConstructor;
 
@@ -33,15 +34,16 @@ public class GetProjectUsecase {
         String univ = null;
         if(project.getUniv() != null)
             univ = universityAdaptor.findById(project.getUniv().getId()).getName();
+
         List<Tech> projectTeches = projectTechAdaptor.findByProject(project).stream()
                 .map(projectTech -> projectTech.getTech())
                 .map(tech -> projectTechAdaptor.findById(tech.getId()))
                 .collect(Collectors.toList());
+
         List<ProjectImage> projectImages = projectImageAdaptor.findByProject(project);
-        List<User> users = projectMemberAdaptor.findByProject(project).stream()
-                .map(projectMember -> projectMember.getUser())
-                .map(user -> userAdaptor.findById(user.getId()))
-                .collect(Collectors.toList());
-        return ProjectResponseDto.of(project, univ, projectTeches, projectImages, users);
+
+        List<ProjectMemberResponseDto> projectMembers = projectMemberAdaptor.findByProject(project)
+                .stream().map(projectMember -> ProjectMemberResponseDto.of(projectMember)).toList();
+        return ProjectResponseDto.of(project, univ, projectTeches, projectImages, projectMembers);
     }
 }
